Look past context formatting objects for overhanging floats

Bug: 797185
Change-Id: I2521e1cf552be56abba6513eada51cad571d2cca